BS-281 | Patrick | Fix line height and alert spacing for the CDSS alerts

--- a/ui/app/styles/bahmni-components/_tooltip.scss
+++ b/ui/app/styles/bahmni-components/_tooltip.scss
@@ -38,6 +38,9 @@
   min-width: 400px;
   max-width: 500px;
   text-wrap: wrap;
+  * {
+    line-height: 1.5em;
+  }
   &:before {
     content: '';
     position: absolute;
